--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API based application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon start"
   },
   "author": "Shubham Sharma",
   "license": "ISC",
