--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "API based application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc --reporter=html mocha || true",
     "start": "nodemon start"
   },
   "author": "Shubham Sharma",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.3.2",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.7",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "nyc": "^15.1.0"
   }
 }
